# FundLifter_XCode

./: .gitignore  Podfile  README.md
AllAboutCPP/: AllAboutCPP.cpp  AllAboutCPP2.cpp  CPPIndentWriter.cpp  CPPIndentWriter.h  CPPUtils.cpp  CPPUtils.h  MHTraceMain.cpp  MHTraceMainTest.cpp  MHTraceMainTest.h  MHTracer.cpp  MHTracer.h  PhotoDateSetter.cpp  TFOpsAnalysis.cpp  TestPointerInit.cpp  main.cpp
AllAboutRL/: L01Q_DP_PEvaluation.swift  L01_DP_PEvaluation.swift  L02Q_QLearning.swift  L02_DP_PIteration.swift  TUTORIALS.txt
AllAboutSwift/: Closures.swift  DateStuff.swift  SwiftUI.swift  TODO.swift  aSwiftTour.swift  allaboutswift.swift  as02_BuiltInCollections.swift
AutoCPPTracer/: AutoCPPTracer.cpp  AutoCPPTracerTest.cc  AutoCPPTracerTestTemplate.cc  BackupBeforeThreadConsolidation_MHTraceMain.cpp  Utils.cpp  Utils.h  WIP_ReduceRepetitiveBlocks.cpp
Bash/: BashMixed.sh
COVID_Test/: main.swift
CPPUtils/: CPPUtils.cpp  CPPUtils.h  CmdLineAnalyzer.cpp
FileUtils/: main.swift
FundLifter/: AppDelegate.swift  CoreIO.swift  FLBinaryIOUtils.swift  FLConstants.swift  FLUtils.swift  GoogleService-Info.plist  Info.plist  Logging.swift  OldCode.swift  PortfolioView3.swift  PortofolioIO.swift  SceneDelegate.swift  TODO.txt
FundLifter/AllAboutRL/: PlayTicTacToe.swift
FundLifter/AllAboutSwift/: Closures.swift  GCD_Timer_Sleep.swift  StructClassLetVar.swift  SwiftLanguageGuide.swift  TODO.swift  as03_Optionals.swift  main_AllAboutSwift.swift
FundLifter/CPP_LLVM/Kaleidoscope/: LLVMMagnusSummary.cpp
FundLifter/CPP_LLVM/Kaleidoscope/Chapter2/: ReadMe.txt  a.out
FundLifter/CPP_LLVM/Kaleidoscope/Chapter4/: magnus2.cpp
FundLifter/CPP_LLVM/Kaleidoscope/Chapter5/: toy.cpp
FundLifter/Model/: DP4WModel.swift  DPBasicCalculator.swift  DPPositionCalculator.swift  DataModels.swift  DataModelsCalculators.swift
FundLifter/Views/: AppDataObservable.swift  ContentView.swift  DP4WRowView.swift  DP4WRowView2.swift  FundView.swift  LogView.swift  MainView.swift  MapView.swift  PortfolioSelectionView.swift  PortfolioView.swift  TestView.swift  TopFundsView.swift  UpdateDBModalView.swift
FundLifterTests/: FundLifterTests.swift
FundLifterUITests/: FundLifterUITests.swift
LLVM/: llvm_cloneandbuild.sh  llvm_mlir_ch1.sh  llvm_mlir_ch2.sh  llvm_mlir_ch7.sh  llvm_mlir_ch7_buildfromllvmproject.sh  llvm_mlir_compile.sh  llvm_mlir_tblgen.sh
LLVM_LLVM/: LLVM_MagnusSummary.cpp
LLVM_LLVM/Kaleidoscope/: LLVMMagnusSummary.cpp
LLVM_LLVM/Kaleidoscope/Chapter2/: toy.cpp
LLVM_LLVM/Kaleidoscope/Chapter3/: a.out
LLVM_LLVM/Kaleidoscope/Chapter4/: toy.cpp
LLVM_MLIR/: MLIR_MagnusSummary.cpp
LLVM_MLIR/toy/: CMakeLists.txt
LLVM_MLIR/toy/Ch1/: CMakeLists.txt
LLVM_MLIR/toy/Ch2/: CMakeLists.txt
LLVM_MLIR/toy/Ch2/include/toy/: CMakeLists.txt  MHOps.td
LLVM_MLIR/toy/Ch2/input/: mliroutput.mlir
LLVM_MLIR/toy/Ch3/: CMakeLists.txt
LLVM_MLIR/toy/Ch3/include/toy/: CMakeLists.txt
LLVM_MLIR/toy/Ch4/: CMakeLists.txt
LLVM_MLIR/toy/Ch4/include/toy/: CMakeLists.txt
LLVM_MLIR/toy/Ch5/: CMakeLists.txt
LLVM_MLIR/toy/Ch5/include/toy/: CMakeLists.txt
LLVM_MLIR/toy/Ch6/: CMakeLists.txt
LLVM_MLIR/toy/Ch6/include/toy/: CMakeLists.txt
LLVM_MLIR/toy/Ch7/: CMakeLists.txt
LLVM_MLIR/toy/Ch7/include/toy/: CMakeLists.txt
MHTraceMaker/: main.cpp
MediaManager/: MMFileDateEntity.cpp  MMFileDateEntity.h  MediaManager.cpp
PhotoDateSetter/: main.cpp
SwiftUtils/: DateUtils.swift  FileGCSUtils.swift  FileOSUtils.swift
TFOpsAnalysis/: main.cpp
TensorFlow/: tf_cloneandbuild.sh  tf_cloneandbuild_old.sh
TestPointerInit/: main.swift
Utils/: DiffLSContent.swift  FileUtils.swift  MiscUtils.swift  main.swift
mhprinter/: BUILD  MHPrinter.cpp  MHPrinter.h  MHPrinterMain.cpp
